<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.bboyc.inventoree.MainActivity"
    android:background="@drawable/cww">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_main" />



    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_wardrobe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginRight="@dimen/fab_margin"
        android:layout_marginBottom="310dp"
        android:elevation="6dp"
        app:pressedTranslationZ="12dp"
        android:src="@drawable/clothes"
        app:backgroundTint="@android:color/holo_red_dark" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_books"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginRight="@dimen/fab_margin"
        android:layout_marginBottom="240dp"
        android:elevation="6dp"
        app:pressedTranslationZ="12dp"
        android:src="@drawable/book"
        app:backgroundTint="@android:color/holo_green_light" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_electronics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginRight="@dimen/fab_margin"
        android:layout_marginBottom="170dp"
        android:elevation="6dp"
        app:pressedTranslationZ="12dp"
        android:src="@drawable/elec"
        app:backgroundTint="@android:color/holo_purple" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_media"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginRight="@dimen/fab_margin"
        android:layout_marginBottom="100dp"
        android:elevation="6dp"
        app:pressedTranslationZ="12dp"
        android:src="@android:drawable/ic_media_play"
        app:backgroundTint="@android:color/holo_red_light" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:elevation="6dp"
        app:pressedTranslationZ="12dp"
        android:src="@android:drawable/ic_input_add"
        android:adjustViewBounds="false"
        app:backgroundTint="@android:color/holo_blue_dark" />


</android.support.design.widget.CoordinatorLayout>
