<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".Fragment_dialog"
    android:weightSum="1">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="center"
        android:id="@+id/dialog_imageView"
        android:layout_weight="2.22" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:id="@+id/dialog_editTextName"
        android:inputType="textCapCharacters"
        android:hint="Title"
         />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:id="@+id/dialog_editTextDetail"
        android:inputType="text"
        android:hint="Details"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="2dp"
        android:id="@+id/dialog_editTextYear"
        android:inputType="date"
        android:hint="Year"

        />

</LinearLayout>
